[package]
name = "ms-symfetch"
version = "0.1.1"
edition = "2021"
description = "commandline utility to fetch binaries from Microsoft's symbol server"
repository = "https://github.com/ezekielathome/ms-symfetch"
authors = ["ezekiel <ezekiel@arcadian.garden>"]
license = "Apache-2.0 OR MIT"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ureq = "2.8.0"
