[package]
name = "ms-symfetch"
version = "0.1.4"
edition = "2021"
description = "commandline utility to fetch binaries from Microsoft's symbol server"
repository = "https://github.com/kusabana/ms-symfetch"
authors = ["kusabana <flower@arcadian.garden>"]
license = "MIT"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ureq = "2.8.0"
